--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=loan-service-api
 server.port=8089
 
+spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
 spring.h2.console.enabled=true
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.show-sql=true
 
 
